# PSA-Recursos-Tribu2

./: .coveragerc  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  codecov.yml  docker-compose.yml  heroku.yml  main.py  pyproject.toml  requirements.txt
.deta/: prog_info  state
.github/workflows/: deploy.yml  linters.yml  test.yml
app/domain/course/: __init__.py  course.py  course_exception.py  course_repository.py
app/domain/hours/: __init__.py  hours.py  hours_exception.py  hours_repository.py
app/domain/resources/: __init__.py  resources.py  resources_exception.py
app/infrastructure/: database.py
app/infrastructure/hours/: __init__.py  hours_dto.py  hours_query_service.py  hours_repository.py
app/infrastructure/sqlite/: database.py
app/usecase/course/: __init__.py  course_command_model.py  course_command_usecase.py  course_query_model.py  course_query_service.py  course_query_usecase.py
app/usecase/hours/: __init__.py  hours_command_model.py  hours_command_usecase.py  hours_query_model.py  hours_query_service.py  hours_query_usecase.py
app/usecase/resources/: __init__.py  resources_query_model.py
tests/domain/course/: test_course.py  test_hours.py
tests/domain/hours/: test_hours.py
tests/domain/resources/: test_resources.py
tests/features/: create_hours.feature  delete_hours.feature  get_hours.feature  patch_hours.feature
tests/features/steps/: background.py  create_hours.py  delete_hours.py  get_hours.py  patch_hours.py
tests/infrastructure/hours/: test_hours_dto.py  (+1 more)
tests/presentation/: test_error_messages.py
(+16 files in other folders)
