[tool.poetry]
name = "ubademy.service.pytemplate"
version = "0.1.0"
description = ""
authors = ["matias-gonz <maigonzalez@fi.uba.ar>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.3.23"
pydantic = "^1.7.3"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
shortuuid = "^1.0.1"
psycopg2 = "^2.9.1"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
pytest = "^6.2.2"
isort = "^5.7.0"
pylint = "^2.6.2"
coverage = {extras = ["toml"], version = "^6.0.2"}
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 60